Fix GTK compatibility for Stretch release (#319)
* Fix GTK compatibility for Stretch release
* Update the bold setting
* Fixed fonts, import and a dependency in kano dialog

--- a/kano_updater/ui/media/css/updater.css
+++ b/kano_updater/ui/media/css/updater.css
@@ -28,7 +28,8 @@ GtkLabel {
 
 .phase,
 .complete {
-    font: Bariol Bold 26px;
+    font-family: Bariol Bold;
+    font-size: 26pt;
     color: white;
 }
 
